# ogtool-backend

./: .gitignore  Api.hs  Calendar.hs  Company.hs  Domain.hs  Main.hs  README.md  Test.hs  acroatic-backend.cabal  ogtool.cabal  stack.yaml
