cabal-version:       3.8
name:                ogtool
version:             0.1.0.0

executable ogtool
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , base64-bytestring
                     , bytestring
                     , clock
                     , directory
                     , http-types
                     , mime-mail
                     , req
                     , safe-exceptions
                     , scotty
                     , text
                     , time
                     , wai-cors
                     , wai-middleware-throttle
  other-modules:       Company, Calendar, Domain, Api, Test
  default-language:    Haskell2010
